Skinning : set parent with automatic weights doesn't take into account locked vertex groups #43814

Closed
opened 2015-02-25 20:58:30 +01:00 by Julien Duroure · 8 comments
Member

System Information
Ubuntu 14.04, GTX 860M

Blender Version
2.73a

Skinning : set parent with automatic weights doesn't take into account locked vertex groups

Exact steps for others to reproduce the error

  • Open .blend in attachment
  • Some weights are already set on vertex groups. For example, all cylinder are 1.0 weighted on 'Bone' group. 'Bone' vertex group is locked, 'Bone.001' is not locked
  • ReApply set parent with automatic weights
    • 'Bone' vertex group weights changed, even if vertex group is locked.

vertex_group_lock_weight.blend

**System Information** Ubuntu 14.04, GTX 860M **Blender Version** 2.73a Skinning : set parent with automatic weights doesn't take into account locked vertex groups **Exact steps for others to reproduce the error** * Open .blend in attachment * Some weights are already set on vertex groups. For example, all cylinder are 1.0 weighted on 'Bone' group. 'Bone' vertex group is locked, 'Bone.001' is not locked * ReApply set parent with automatic weights - > 'Bone' vertex group weights changed, even if vertex group is locked. [vertex_group_lock_weight.blend](https://archive.blender.org/developer/F145880/vertex_group_lock_weight.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm the problem.
It also exists with assign automatic from bones operator from Weights menu.
And during my test, I found another one.
Maybe it is linked.
It looks like weight painting in an unlock group on vertices shared with a locked group is not allowed.

I confirm the problem. It also exists with assign automatic from bones operator from Weights menu. And during my test, I found another one. Maybe it is linked. It looks like weight painting in an unlock group on vertices shared with a locked group is not allowed.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-02-27 09:59:50 +01:00

This issue was referenced by a7e80a9470

This issue was referenced by a7e80a94708408d99d9c1674ce0738bc60411981

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a7e80a9470.

Closed by commit a7e80a9470.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43814
No description provided.