Fix T43814: Skinning : set parent with automatic weights doesn't take into account locked vertex groups.

Simply skip a bone's vgroup when it already exists and is locked.